Fix header wrap

--- a/static/style.css
+++ b/static/style.css
@@ -30,6 +30,7 @@ header a {
 
 .upper_header {
     display: flex;
+    flex-wrap: wrap;
     min-height: 120px;
 }
 
